<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


	<TextView
		android:id="@+id/text_information"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="60dp"
		android:gravity="center"
		android:text="@string/about_title"
		android:textAlignment="center"
		android:textAllCaps="true"
		android:textColor="@color/black"
		android:textSize="40sp" />

	<TextView
	android:id="@+id/title_causes1"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:text="@string/about_project_title"
	android:textSize="20sp"
	android:gravity="center_horizontal"
	android:textColor="@color/black"
	android:paddingTop="10dp"/>

	<TextView
		android:id="@+id/text_causes1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="20dp"
		android:text="@string/about_project_group"
		android:textColor="@color/darkgrey"
		android:layout_gravity="center"
		android:textSize="20sp"
		android:paddingBottom="20dp"/>

	<TextView
		android:id="@+id/title_causes1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/API_title"
		android:textSize="20sp"
		android:gravity="center_horizontal"
		android:textColor="@color/black"
		android:paddingTop="5dp"/>

	<TextView
		android:id="@+id/text_causes1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="20dp"
		android:text="@string/about_API"
		android:textColor="@color/darkgrey"
		android:layout_gravity="center"
		android:textSize="20sp"
		android:paddingBottom="20dp"/>

</LinearLayout>