<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="60dp"
	android:background="@color/backgroundGrey"
	tools:context="ui.search.SearchFragment">

	<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/backgroundGrey">

		<TextView
			android:id="@+id/text_search"
			android:layout_width="391dp"
			android:layout_height="78dp"
			android:layout_marginTop="30dp"
			android:text="@string/disaster_search"
			android:gravity="center"
			android:textAllCaps="true"
			android:textColor="@color/black"
			android:textSize="40sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<Button
			android:id="@+id/button_avalanche"
			android:layout_width="260dp"
			android:layout_height="65dp"
			android:layout_marginTop="20dp"
			android:background="@drawable/round_box"
			android:backgroundTint="@color/avalanche_button_color"
			android:backgroundTintMode="multiply"
			android:drawableRight="@drawable/ic_snowing"
			android:paddingRight="30dp"
			android:text="@string/search_type_avalance"
			android:textAlignment="center"
			android:textAllCaps="true"
			android:textSize="20sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/text_search" />

		<Button
			android:id="@+id/button_landslide"
			android:layout_width="260dp"
			android:layout_height="65dp"
			android:layout_marginTop="24dp"
			android:background="@drawable/round_box"
			android:backgroundTint="@color/landslide_button_color"
			android:backgroundTintMode="multiply"
			android:drawableRight="@drawable/ic_rocks"
			android:paddingRight="30dp"
			android:text="@string/search_type_landslide"
			android:textAlignment="center"
			android:textAllCaps="true"
			android:textSize="20sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/button_flood" />

		<Button
			android:id="@+id/button_flood"
			android:layout_width="260dp"
			android:layout_height="65dp"
			android:layout_marginTop="24dp"
			android:background="@drawable/round_box"
			android:backgroundTint="@color/flood_button_color"
			android:backgroundTintMode="multiply"
			android:drawableRight="@drawable/ic_water"
			android:paddingRight="30dp"
			android:text="@string/search_type_flood"
			android:textAlignment="center"
			android:textAllCaps="true"
			android:textSize="20sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/button_avalanche" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>