<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/backgroundGrey"
	tools:context=".ui.search.AvalancheSearchFragment" >

	<TextView
		android:id="@+id/textView_avalanche"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:text="@string/search_fragment_avalanche"
		android:textAlignment="center"
		android:textColor="@color/black"
		android:textSize="45sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ProgressBar
		android:id="@+id/loading_progress_bar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="invisible"
		app:layout_constraintTop_toTopOf="@+id/input_search_avalanche"
		app:layout_constraintRight_toRightOf="@+id/input_search_avalanche"
		app:layout_constraintBottom_toBottomOf="@+id/input_search_avalanche"/>

	<TextView
		android:id="@+id/text_choose_municipality"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="3dp"
		android:text="@string/search_choose_region"
		android:textAlignment="center"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView_avalanche"/>

	<!-- Can be modularised into separate layout file later-->
	<AutoCompleteTextView
		android:id="@+id/input_search_avalanche"
		android:layout_width="250dp"
		android:layout_height="70dp"
		android:hint="Søk"
		android:inputType="text"
		android:paddingStart="15dp"
		android:paddingEnd="0dp"
		android:textSize="20sp"
		android:layout_marginTop="30dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/text_choose_municipality" />

	<Button
		android:id="@+id/location_button"
		style="?android:attr/borderlessButtonStyle"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:background="@drawable/ic_location"
		android:layout_marginTop="160dp"
		android:layout_marginRight="35dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/button_avalanche_region_list"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:text="@string/search_listchoice"
		android:textAlignment="center"
		android:textSize="20sp"
		android:drawableRight="@drawable/ic_list"
		android:paddingRight="20dp"
		android:background="@drawable/round_box"
		android:backgroundTint="@color/egg"
		android:backgroundTintMode="multiply"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginBottom="70dp" />
	<!--Margin bottom can be removed once issue: "avalanche fragment alignment"
	is resolved"-->

</androidx.constraintlayout.widget.ConstraintLayout>